<resources>
    <string name="app_name">Employee Payroll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abc</string>
    <string name="nav_header_subtitle">Employee Payroll System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">Employee Payroll\nSystem</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home">Home</string>
    <string name="add_employee_payroll">Add Employee Payroll</string>
    <string name="list_payroll">List Payroll</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="quit">Are you sure want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_no">Contact Number\n +1-9876389273</string>
    <string name="email_data">Email\nabc@gmail.com</string>
    <string name="title_activity_list_payroll">All Payrolls</string>
    <string name="title_activity_add_emp_payroll">Add Employee Payroll</string>
    <string name ="prompt_dob">Enter DOB</string>
    <string name ="prompt_name">Enter Name</string>
    <string name="prompt_vehicle">Vehicle Available</string>
    <string name="employee_type">Employee Type</string>
    <string name="part_time">Part Time</string>
    <string name="intern">Intern</string>
    <string name="full_time">Full Time</string>
    <string name="submit">Submit</string>
    <string name="enter_employee_hour_rate">Enter Employee Hour Rate</string>
    <string name="enter_employee_worked_hours">Enter Employee Worked Hours</string>
    <string name="is_percentage_commission_basis_part_this_employee">Is percentage commission basis part this employee</string>
    <string name="enter_fixed_commision_amount">Enter Fixed Commision Amount</string>
</resources>
