<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_verified_user_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_add_emp_payroll"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/add_employee_payroll" />
        <item
            android:id="@+id/nav_listpayroll"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/list_payroll" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
