<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmpPayroll"
    android:id="@+id/partTimeView"
    android:orientation="vertical"
    tools:showIn="@layout/content_add_emp_payroll">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/emp_hr_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint = "@string/enter_employee_hour_rate"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/emp_worked_hrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_employee_worked_hours"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ispercentage"
        android:text = "@string/is_percentage_commission_basis_part_this_employee"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/fixedCommision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_fixed_commision_amount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    </LinearLayout>