<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_new_payroll"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_employee_payroll"
        android:textStyle="bold" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/list_payroll"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_payroll"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/needHelp"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/currentdate"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textStyle="bold" />
</LinearLayout>